# extrator

./: .gitignore  README.md  golden_set.csv  golden_set.xlsx  html_folder_to_unified_csvs.py  pyproject.toml  requirements.txt  teste.xlsx  teste1.xlsx  teste2.xlsx  teste3.xlsx  teste4.xlsx  teste5.xlsx  teste6.xlsx  teste7_LLM resumo.xlsx  ~$golden_set.xlsx
csv/: edital2.csv  edital3.csv
csv_out/: edital1.csv
examples/: run.sh
gt/: edital 4_GT.csv  edital 6_GT.csv  edital 8_GT.csv  edital 9_GT.csv  edital1_GT.csv  edital2_GT.csv  edital3_GT.csv
html/: edital1.html  edital2.html  edital3.html
scripts/: html2csv_cli.py  pdf2gt_cli.py  preview_table_transformer.py  quick_check.py  run_table_transformer.py
src/disdem_etl/: llm_pdf_tables.py  pdf_plus_hint_to_gt.py
src/edital_extractor/: cli.py  preprocessing.py  table_extractors.py  utils.py
src/edital_extractor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_html_to_unified.py  test_llm_pdf_tables.py  test_markdown_extractor.py  test_pdf_plus_hint.py  test_preprocessing.py  test_utils_quantities.py
