[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "edital-extractor"
version = "0.1.0"
description = "Processa editais em PDF e gera planilhas com os campos extraídos."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyPDF2>=3.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "tqdm>=4.66.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
